Atualizações no HTML e CSS do codigo principal

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="diagonal-grid">
             <!-- Item 1 - Comercial -->
             <div class="diagonal-item">
-                <img src="/img/Comercial1.jpg" alt="Comercial">
+                <img src="/Comercial1.jpg" alt="Comercial">
                 <div class="overlay">
                     <h3>Comercial</h3>
                     <p>Soluções especializadas para ambientes comerciais. Oferecemos instalação, manutenção e projetos
@@ -57,7 +57,7 @@
 
             <!-- Item 2 - Industrial -->
             <div class="diagonal-item">
-                <img src="/img/Indrutrial1.jpg" alt="Industrial">
+                <img src="/Indrutrial1.jpg" alt="Industrial">
                 <div class="overlay">
                     <h3>Industrial</h3>
                     <p>Serviços de alto padrão para o setor industrial. Expertise em instalações de grande porte e
@@ -68,7 +68,7 @@
 
             <!-- Item 3 - Rural -->
             <div class="diagonal-item">
-                <img src="/img/Rural1.jpg" alt="Rural">
+                <img src="/Rural1.jpg" alt="Rural">
                 <div class="overlay">
                     <h3>Rural</h3>
                     <p>Soluções elétricas especializadas para o campo. Atendemos todas as necessidades do setor rural
@@ -79,7 +79,7 @@
 
             <!-- Item 4 - Residencial -->
             <div class="diagonal-item">
-                <img src="/img/Residencial1.jpg" alt="Residencial">
+                <img src="/Residencial1.jpg" alt="Residencial">
                 <div class="overlay">
                     <h3>Residencial</h3>
                     <p>Serviços completos para sua casa. Instalações, reparos e projetos elétricos residenciais com
